test/fail/missing_brace.zn
# Test: Missing brace (expect 1 error)
# ERRORS: 1

func main() {
    if true {
        var x = 1

    return 0
}
